Added new styling to h2

--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ h1 {
     width: 100%;
 }
 
+h2 {  /* Added via LittleFeature Branch */
+    font-family: 'Poller One', cursive;
+    font-weight: 700;
+}
+
 h3 {
 	font: 900 1em 'Raleway', sans-serif;
     color: rgba(0,0,0,.5);
